// Vitest Snapshot v1

exports[`makeTable() > returns array of arrays with given fields 1`] = `
[
  [
    "Ontime · Schedule Template",
  ],
  [
    "Event Name",
    "",
  ],
  [
    "Event URL",
    "",
  ],
  [],
  [
    "Time Start",
    "Time End",
    "Event Title",
    "Presenter Name",
    "Event Subtitle",
    "Is Public? (x)",
    "Notes",
    "Colour",
    "user0:test",
  ],
  [
    "00:00:00",
    "00:00:00",
    "test title 1",
    "",
    "",
    "x",
    "",
    "",
    "test",
    "test",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
]
`;

exports[`makeTable() returns array of arrays with given fields 1`] = `
Array [
  Array [
    "Ontime · Schedule Template",
  ],
  Array [
    "Event Name",
    "",
  ],
  Array [
    "Event URL",
    "",
  ],
  Array [],
  Array [
    "Time Start",
    "Time End",
    "Event Title",
    "Presenter Name",
    "Event Subtitle",
    "Is Public? (x)",
    "Notes",
    "Colour",
    "user0:test",
  ],
  Array [
    "00:00:00",
    "00:00:00",
    "test title 1",
    "",
    "",
    "x",
    "",
    "",
    "test",
    "test",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
]
`;
